<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.rey.material.widget.TextView
            android:id="@+id/hours"
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onTimeTextSelected"
            android:text="HH : MM"
            android:textSize="40dp"
            app:rd_enable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunday" />

        <ToggleButton
            android:id="@+id/toggMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday" />

        <ToggleButton
            android:id="@+id/toggTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday" />

        <ToggleButton
            android:id="@+id/toggWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday" />

        <ToggleButton
            android:id="@+id/toggThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday" />

        <ToggleButton
            android:id="@+id/toggFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday" />

        <ToggleButton
            android:id="@+id/toggSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.rey.material.widget.TextView
            android:id="@+id/ringtones"
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="setRingtone"
            android:text="Default Ringtone"
            android:textSize="20dp"
            app:rd_enable="true" />


        <com.rey.material.widget.CheckBox
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="Vibrate"
            android:textSize="20dp" />


    </LinearLayout>

    <com.rey.material.widget.EditText
        android:id="@+id/label"
        style="@style/Material.Drawable.Ripple.Touch.Light"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:clickable="true"
        android:hint="Label"
        android:onClick="setLabel"
        android:padding="15dp"
        android:textSize="20dp"
        app:rd_enable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="saveAlarm"
            android:text="Save"
            app:rd_enable="true" />

        <com.rey.material.widget.Button
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="deleteAlarm"
            android:text="Delete"
            app:rd_enable="true" />
    </LinearLayout>


</LinearLayout>